Rename menu links admin page to top bar

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -281,6 +281,7 @@ en:
         max_number_of_links_info: "Link to %{about_page} is always displayed as the first menu link"
         about_page: "about page"
       topbar:
+        topbar: "Top bar"
         new_listing_button_label: "\"Post a new listing\" button text"
         invalid_post_listing_button_label: "Please provide a valid text for \"Post a new listing\" button"
       transactions:
